# meca500

./: .gitignore  ActivateRobot.c  ActivateRobot.h  CMakeLists.txt  ConnectToRobot.c  ConnectToRobot.h  DeactivateRobot.h  DestroySocket.c  DestroySocket.h  GetSocket.c  GetSocket.cpp  GetSocket.h  HomeRobot.c  Meca500 Operation Flow Chart  Meca500.h  MessageAssembler.cpp  MessageAssembler.h  Messages.cpp  Messages.h  Messaging.cpp  Messaging.h  ReadFromSocket.c  ReadFromSocket.h  Sending.cpp  Sending.h  SetJoints.c  SetJoints.h  SocketInterface.h  main.c  main.cpp  makefile  whereToPickUp.txt
Old C Files/: ActivateRobot.c  DeactivateRobot.c  DestroySocket.c  HomeRobot.h  ReadFromSocket.c
java/: meca500.java  wheretopickup.txt
src/: Exception.h  GetSocket.h  LibsocketWrapper.cpp  LibsocketWrapper.h  Meca500.cpp  MessageAssembler.cpp  Receiving.cpp  Receiving.h  Sending.cpp  Sending.h  SocketInterface.h  SocketWrapper.cpp  SocketWrapper.h  main.cpp
test/: CMakeLists.txt  Meca500_test.cpp  MessageAssembler_test.cpp  Messages_test.cpp  Receiving_tests.cpp  Sending_tests.cpp  main_test.cpp
test/fakes/: Socket_Fake.cpp  Socket_Fake.h
